--- a/20. 泛型/1. 简单泛型.md
+++ b/20. 泛型/1. 简单泛型.md
@@ -1,4 +1,4 @@
-## 持有泛型字段的类的定义
+## 持有泛型字段的类的定义-泛型类
 * 在类名后，用`<T>`声明类型占位符  
 ```java
 public GenericHolder<T> {
@@ -11,4 +11,8 @@ public GenericHolder<T> {
     return this.a;
   }
 }
+```
+## 用泛型实现 堆
+```
+
 ```
