--- a/20. 泛型/1. 简单泛型.md
+++ b/20. 泛型/1. 简单泛型.md
@@ -15,45 +15,46 @@ public GenericHolder<T> {
 ## 用泛型实现 堆
 ```java
 public class LinkedStack<T> {
-	public class Node<U> {
-		private U item;
-		private Node<U> next;
-		public Node() {
-			this.item = null;
-			this.next = null;
-		}
-		public Node(U item, Node<U> next) {
-			this.item = item;
-			this.next = next;
-		}
+  public class Node<U> {
+    private U item;
+    private Node<U> next;  //  所有的声明，都需要加 类型占位符<T>
+    
+    public Node() {
+      this.item = null;
+      this.next = null;
+    }
+    public Node(U item, Node<U> next) {  // 同上
+      this.item = item;
+      this.next = next;
+    }
 		
-		public boolean end() {
-			return item == null && next == null;
-		}
-	}
+    public boolean end() {
+      return item == null && next == null;
+    }
+  }
 	
-	public Node<T> top = new Node<T>();
+  private Node<T> top = new Node<T>();
 	
-	public void push(T item) {
-		top = new Node<>(item, top);
-	}
+  public void push(T item) {
+    top = new Node<>(item, top);
+  }
 	
-	public T pop() {
-		T result = top.item;
-		if(!top.end()) {
-			top = top.next;
-		}
-		return result;
-	}
+  public T pop() {
+    T result = top.item;
+    if(!top.end()) {
+      top = top.next;
+    }
+    return result;
+    }
 	
-	public static void main(String[] args) {
-		LinkedStack<String> stack = new LinkedStack<String>();
-		for(String ss : "jia shao kun".split(" ")) {
-			stack.push(ss);
-		}
-		while(!stack.top.end()) {
-			System.out.println(stack.pop());
-		}
-	}
+  public static void main(String[] args) {
+    LinkedStack<String> stack = new LinkedStack<String>();
+    for(String ss : "jia shao kun".split(" ")) {
+      stack.push(ss);
+    }
+    while(stack.pop() != null) {
+      System.out.println(stack.pop());
+    }
+  }
 }
 ```
