--- a/20. 泛型/1. 简单泛型.md
+++ b/20. 泛型/1. 简单泛型.md
@@ -58,3 +58,7 @@ public class LinkedStack<T> {
   }
 }
 ```
+### implements Iterable<T> 接口
+* 需要实现`Iterater<T> iterator() {}`方法  
+> 在该方法中，需要返回一个实现了`implements Iterator<T>`接口的类  
+* `Iterator<T>`接口中，需要实现两个方法：`boolean hasNext() {}`, `T next() {}`  
