--- a/20. 泛型/1. 简单泛型.md
+++ b/20. 泛型/1. 简单泛型.md
@@ -60,5 +60,25 @@ public class LinkedStack<T> {
 ```
 ### implements Iterable<T> 接口
 * 需要实现`Iterater<T> iterator() {}`方法  
-> 在该方法中，需要返回一个实现了`implements Iterator<T>`接口的类  
+在该方法中，需要返回一个实现了`implements Iterator<T>`接口的类  
 * `Iterator<T>`接口中，需要实现两个方法：`boolean hasNext() {}`, `T next() {}`  
+```java
+public ClassIterable implements Iterable<Coffee> {
+	
+	@Override
+  public Iterator<Coffee> iterator() {
+		return new Iterator<Coffee>(){
+		  private int count = 5;
+	    
+			@Override
+			public boolean hasNext() {
+				return count > 0;
+			}
+			
+			@Override
+			public Coffee next() {
+			  return new Coffee();
+		};
+	}
+}
+```
