--- a/20. 泛型/1. 简单泛型.md
+++ b/20. 泛型/1. 简单泛型.md
@@ -1,3 +1,9 @@
+序号|标题
+--|--
+1|持有泛型字段的类的定义-泛型类
+2|用泛型实现 堆
+3|Iterable<T> 接口
+
 ## 持有泛型字段的类的定义-泛型类
 * 在类名后，用`<T>`声明类型占位符  
 ```java
@@ -65,20 +71,22 @@ public class LinkedStack<T> {
 ```java
 public ClassIterable implements Iterable<Coffee> {
 	
-	@Override
+  @Override
   public Iterator<Coffee> iterator() {
-		return new Iterator<Coffee>(){
-		  private int count = 5;
+    return new Iterator<Coffee>() {
+      private int count = 5;
 	    
-			@Override
-			public boolean hasNext() {
-				return count > 0;
-			}
+      @Override
+      public boolean hasNext() {
+        return count > 0;
+      }
 			
-			@Override
-			public Coffee next() {
-			  return new Coffee();
-		};
-	}
+      @Override
+      public Coffee next() {
+        count--;
+        return new Coffee();
+      }
+    };
+  }
 }
 ```
