--- a/20. 泛型/2. 泛型方法.md
+++ b/20. 泛型/2. 泛型方法.md
@@ -1,9 +1,9 @@
---|--
 序号|标题
+--|--
 1|变长参数与泛型方法
 
 类本身可能是泛型的，也可能不是，不过这与它的方法是否是泛型的并没有什么关系。  
-泛型方法独立于类而改变方法。要定义泛型方法，请将泛型参数列表放置在`返回值之前`。
+泛型方法独立于类而改变方法。要定义泛型方法，请将泛型参数列表放置在**返回值**之前。
 ```java
 public class GenericMethods {
     public <T> void f(T x) {
