--- a/20. 泛型/2. 泛型方法.md
+++ b/20. 泛型/2. 泛型方法.md
@@ -3,10 +3,11 @@
 1|变长参数与泛型方法
 
 类本身可能是泛型的，也可能不是，不过这与它的方法是否是泛型的并没有什么关系。  
+
 泛型方法独立于类而改变方法。要定义泛型方法，请将泛型参数列表放置在**返回值**之前。
 ```java
 public class GenericMethods {
-    public <T> void f(T x) {
+    public <T> void f(T x) {  //在返回值类型前面，需要加上泛化类型占位符<T>
         System.out.println(x.getClass().getName());
     }
 
@@ -30,3 +31,35 @@ GenericMethods
 */
 ```
 ### 1.变长参数与泛型方法
+泛型方法和变长参数列表可以很好地共存：
+```java
+
+import java.util.ArrayList;
+import java.util.List;
+
+public class GenericVarargs {
+    @SafeVarargs
+    public static <T> List<T> makeList(T... args) {
+        List<T> result = new ArrayList<>();
+        for (T item : args)
+            result.add(item);
+        return result;
+    }
+
+    public static void main(String[] args) {
+        List<String> ls = makeList("A");
+        System.out.println(ls);
+        ls = makeList("A", "B", "C");
+        System.out.println(ls);
+        ls = makeList(
+                "ABCDEFFHIJKLMNOPQRSTUVWXYZ".split(""));
+        System.out.println(ls);
+    }
+}
+/* Output:
+[A]
+[A, B, C]
+[A, B, C, D, E, F, F, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X, Y, Z]
+*/
+ 
+```
