--- a/17. 容器/1. 三种Set及应用类的构建.md
+++ b/17. 容器/1. 三种Set及应用类的构建.md
@@ -3,6 +3,11 @@
 * HashSet 为了快速查找而设计的Set，HashSet容器所持有的类必须实现hashCode()方法  
 * LinkedHashSet 具有HashSet的查找速度，同时保持类对象的插入顺序，同上持有类必须实现hashCode()方法  
 * TreeSet 对插入的类对象进行排序，持有类必须实现Comparable接口
+
+知识点：
+* 实现equals()方法
+* 实现`Comparable<T>`接口，及`pulic int compareTo(T e)`方法
+* 反射含参数的构造方法`getConstructor(Para.class).newInstence(arg)`
 ```java
 import java.util.HashSet;
 import java.util.*;
