--- a/17. 容器/1. 三种Set及应用类的构建.md
+++ b/17. 容器/1. 三种Set及应用类的构建.md
@@ -12,6 +12,7 @@
 import java.util.HashSet;
 import java.util.*;
 
+// 构造三个持有类
 class Base {
 	int i;
 	public Base(int i) {
@@ -24,7 +25,6 @@ class Base {
 		return Integer.toString(i);
 	}
 }
-
 class HashType extends Base {
 	public HashType(int i) {
 		super(i);
@@ -33,7 +33,6 @@ class HashType extends Base {
 		return i;
 	}
 }
-
 class TreeType extends Base implements Comparable<TreeType>{
 	public TreeType(int i) {
 		super(i);
@@ -42,6 +41,7 @@ class TreeType extends Base implements Comparable<TreeType>{
 		return this.i < t.i ? -1 : (this.i == t.i ? 0 : 1);
 	}
 }
+
 public class TypesForSet {
 	static <T> Set<T> fill(Set<T> set, Class<T> type) {
 		try {
