--- a/17. 容器/0. 容器的填充.md
+++ b/17. 容器/0. 容器的填充.md
@@ -1,2 +1,4 @@
 # Arrays.aslist()
 `Arrays.asList(array)`返回一个长度不可变的List对象，由数组array的元素填充，List仅长度不可变，某个指定位置的内容可变。  
+# Collections.addAll(CollectionHandler, Array)
+`Collections.addAll(CollectionHandler, Array)`将Array对象的所有元素填充至容器对象CollectionHandler中，该容器对象具有完整的容器方法和属性。  
